<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/expense"
        android:title="@string/add_expense"
        app:showAsAction="never"/>
    <item
        android:id="@+id/addSavingsCat"
        android:title="@string/add_savings_cat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/addDebt"
        android:title="@string/add_debt"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_next"
        android:id="@+id/next_day"
        android:title="Next Day"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_auto_mode"
        android:id="@+id/mode"
        android:title="Mode Auto/Manual"
        app:showAsAction="always"/>
</menu>