<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.view.ViewSavingCatFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewSaveName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/save_cat_name" />

        <TextView
            android:id="@+id/textViewSaveNameEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewSaveName"
            android:layout_marginStart="180dp" />

        <TextView
            android:id="@+id/textViewSaveGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSaveName"
            android:layout_alignTop="@+id/textViewSaveName"
            android:layout_marginTop="40dp"
            android:text="@string/save_cat_goal" />

        <TextView
            android:id="@+id/textViewSaveGoalEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSaveNameEntry"
            android:layout_alignBottom="@+id/textViewSaveGoal" />

        <TextView
            android:id="@+id/textViewSaveCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSaveGoal"
            android:layout_alignBottom="@+id/textViewSaveGoal"
            android:layout_marginBottom="-40dp"
            android:text="@string/save_cat_current" />

        <TextView
            android:id="@+id/textViewSaveCurrentEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSaveGoalEntry"
            android:layout_alignBottom="@+id/textViewSaveCurrent" />

        <TextView
            android:id="@+id/textViewSavePrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSaveCurrent"
            android:layout_alignBottom="@+id/textViewSaveCurrent"
            android:layout_marginBottom="-40dp"
            android:text="@string/save_cat_prio" />

        <TextView
            android:id="@+id/textViewSavePrioEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSaveCurrentEntry"
            android:layout_alignBottom="@+id/textViewSavePrio" />

        <TextView
            android:id="@+id/textViewSavePerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSavePrio"
            android:layout_alignBottom="@+id/textViewSavePrio"
            android:layout_marginBottom="-40dp"
            android:text="@string/save_cat_perc" />

        <TextView
            android:id="@+id/textViewSavePercEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSavePrioEntry"
            android:layout_alignBottom="@+id/textViewSavePerc" />

        <TextView
            android:id="@+id/textViewSaveList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSavePerc"
            android:layout_alignBottom="@+id/textViewSavePerc"
            android:layout_marginBottom="-40dp"
            android:text="@string/save_cat_list" />

        <ListView
            android:id="@+id/listViewSaveList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewSavePercEntry"
            android:layout_alignTop="@+id/textViewSaveList"
            android:orientation="vertical" >

        </ListView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>