<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditExpenseCatFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp">
        <TextView
            android:id="@+id/textViewCatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/exp_cat_name" />

        <EditText
            android:id="@+id/editTextCatName"
            android:layout_width="wrap_content"
            android:layout_height="34dp"

            android:layout_alignBottom="@+id/textViewCatName"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="-10dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewCatBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewCatName"
            android:layout_alignTop="@+id/textViewCatName"
            android:layout_marginTop="40dp"
            android:text="@string/exp_cat_budget" />

        <EditText
            android:id="@+id/editTextCatBudget"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignStart="@+id/editTextCatName"
            android:layout_alignBottom="@+id/textViewCatBudget"
            android:layout_marginBottom="-10dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewCatSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewCatBudget"
            android:layout_alignTop="@+id/textViewCatBudget"
            android:layout_marginTop="40dp"
            android:text="@string/exp_cat_sub" />

        <CheckBox
            android:id="@+id/checkBoxCatSub"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignStart="@+id/editTextCatBudget"
            android:layout_alignBottom="@+id/textViewCatSub"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="-12dp" />

        <TextView
            android:id="@+id/textViewCatParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewCatSub"
            android:layout_alignTop="@+id/textViewCatSub"
            android:layout_marginTop="40dp"
            android:text="@string/exp_cat_parent" />

        <Spinner
            android:id="@+id/spinnerCatParent"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/checkBoxCatSub"
            android:layout_alignBottom="@+id/textViewCatParent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewCatParent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-80dp"
            android:onClick="run"
            android:text="@string/save"
            tools:ignore="UsingOnClickInXml" />


    </RelativeLayout>
</ScrollView>