<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.view.ViewExpenseFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewExpName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/exp_name" />

        <TextView
            android:id="@+id/textViewExpNameEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewExpName"
            android:layout_marginStart="180dp" />

        <TextView
            android:id="@+id/textViewExpDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpName"
            android:layout_alignTop="@+id/textViewExpName"
            android:layout_marginTop="40dp"
            android:text="@string/exp_date" />

        <TextView
            android:id="@+id/textViewExpDateEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpNameEntry"
            android:layout_alignBottom="@+id/textViewExpDate" />

        <TextView
            android:id="@+id/textViewExpAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpDate"
            android:layout_alignBottom="@+id/textViewExpDate"
            android:layout_marginBottom="-40dp"
            android:text="@string/exp_amount" />

        <TextView
            android:id="@+id/textViewExpAmountEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpDateEntry"
            android:layout_alignBottom="@+id/textViewExpAmount" />

        <TextView
            android:id="@+id/textViewExpType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpAmount"
            android:layout_alignBottom="@+id/textViewExpAmount"
            android:layout_marginBottom="-40dp"
            android:text="@string/exp_type_cat" />

        <TextView
            android:id="@+id/textViewExpTypeEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpAmountEntry"
            android:layout_alignBottom="@+id/textViewExpType" />

        <TextView
            android:id="@+id/textViewExpStable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpType"
            android:layout_alignBottom="@+id/textViewExpType"
            android:layout_marginBottom="-40dp"
            android:text="@string/exp_stable" />

        <TextView
            android:id="@+id/textViewExpStableEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewExpTypeEntry"
            android:layout_alignBottom="@+id/textViewExpStable" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>